# rail_segmentation

./: .travis.yml  AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  package.xml
action/: RecognizeAll.action
config/: zones-no-map.yaml  zones.yaml
include/rail_segmentation/: SegmentationZone.h  Segmenter.h  segmentation.h
launch/: grasp_collection_nodes.launch
msg/: SegmentedObject.msg  SegmentedObjectList.msg
nodes/: continuous_segmenter.cpp  rail_segmentation.cpp
src/: SegmentationZone.cpp  Segmenter.cpp  segmentation.cpp
srv/: Recognize.srv  RemoveObject.srv  Segment.srv
