<?xml version="1.0"?>
<package>
  <name>rail_segmentation</name>
  <version>0.0.2</version>
  <description>Segmentation Functionality in the RAIL Lab</description>
  
  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="davidkent@wpi.edu">David Kent</author>
  
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rail_segmentation</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/rail_segmentation/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/rail_segmentation</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>  
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
</package>
